[package]
name = "rust_2023_advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "main"

[profile.dev]
opt-level = 3

[profile.bench]
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
dashmap = "5.4.0"
threadpool = "1.8.1"
smallvec = { version = "1.10.0", features = ["const_new", "const_generics"] }
regex = "1.7.0"
peg = "0.8.1"
rand = "0.8.5"
tracking-allocator = "0.4.0"
timeit = "0.1.2"
tqdm = "0.6.0"
rand_xoshiro = "0.6.0"
vec-collections = "0.4.3"
heapless = "0.8.0"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "produce_timings"
path = "src/produce_timings.rs"


[[bench]]
name = "j1"
path = "src/bench_j1.rs"
harness = false


[[bench]]
name = "j2"
path = "src/bench_j2.rs"
harness = false


[[bench]]
name = "j3"
path = "src/bench_j3.rs"
harness = false


[[bench]]
name = "j4"
path = "src/bench_j4.rs"
harness = false


[[bench]]
name = "j5"
path = "src/bench_j5.rs"
harness = false


[[bench]]
name = "j6"
path = "src/bench_j6.rs"
harness = false


[[bench]]
name = "j7"
path = "src/bench_j7.rs"
harness = false


[[bench]]
name = "j8"
path = "src/bench_j8.rs"
harness = false